hphp/hack/test/typecheck/funcall_explicit_arg_error.php.like_types.exp
File "funcall_explicit_arg_error.php", line 8, characters 27-30:
Invalid argument (Typing[4110])
File "funcall_explicit_arg_error.php", line 3, characters 22-23:
Expected ~int because it is an unenforceable type
File "funcall_explicit_arg_error.php", line 8, characters 27-30:
But got string
